[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loveletter-qx20"
version = "0.1.0"
description = "Open-source Canon SELPHY QX20 printing client and MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Uzu and Solinelle" }
]
keywords = ["canon", "selphy", "qx20", "printer", "mcp", "cpnp"]
dependencies = [
  "Pillow>=10",
  "mcp>=1.0"
]

[project.urls]
Homepage = "https://github.com/susukoooooo/loveletter-qx20"
Repository = "https://github.com/susukoooooo/loveletter-qx20"

[project.scripts]
loveletter-qx20 = "qx20:main"

[tool.setuptools]
py-modules = ["qx20", "mcp_server"]
